apps/ghostfolio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ghostfolio
  namespace: apps
spec:
  selector:
    app: ghostfolio
  ports:
    - name: http
      port: 3333
      targetPort: 3333
      protocol: TCP
