apps/ghostfolio/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ghostfolio
  namespace: apps
spec:
  ingressClassName: traefik
  rules:
    - host: ghostfolio.stoneforge.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ghostfolio
                port:
                  number: 3333
